Prevent long links from causing horizontal scroll

--- a/assets/styles/less/main.less
+++ b/assets/styles/less/main.less
@@ -19,6 +19,7 @@ body {
   margin-right: auto;
   margin-left: auto;
   max-width: 950px;
+  overflow-wrap: break-word;
 }
 
 .navbar img {
